适配antlr4.10，重构为esm代码

--- a/src/antlr-core/templates/lexer.d.ts.ejs
+++ b/src/antlr-core/templates/lexer.d.ts.ejs
@@ -9,4 +9,8 @@ export declare class <%= className %> extends Lexer {
     readonly grammarFileName: string;
 
     constructor(input: InputStream);
+
+    <% _.each(fields, (field) => { %>
+    <%= field %>
+    <% }); %>
 }
