parser生成的.d.ts文件增加RULE_* 字段

--- a/src/antlr-core/templates/parser.d.ts.ejs
+++ b/src/antlr-core/templates/parser.d.ts.ejs
@@ -30,6 +30,9 @@ declare class <%= className %> extends Parser {
     <%_ _.each(symbolicNames, (sym) => { %>
     static readonly <%= sym %>: number
     <%_ }) %>
+    <%_ _.each(ruleNames, (rule) => { %>
+    static readonly RULE_<%= rule %>: number
+    <%_ }) %>
     <%_ _.each(methods, (method) => { %>
     <%= method.name %>(<%= method.args %>): <%= className %>.<%= method.type %>
     <%_ }) %>
